# universal-workshop-erp

./: .copilotignore  .env.example  .gitignore  .releaserc.js  .windsurfrules  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_RULES.md  Dockerfile  IDEAL_SYSTEM_ARCHITECTURE.md  JAVASCRIPT_FIXES_SUMMARY.md  LICENSE  OPTIONAL_FIELDS_CHANGES.md  PHASE4_CLEANUP_COMPLETION.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETE_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION_GUIDE.md  PHASE_1_COMPLETION_REPORT.md  Procfile  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_COMPLETE.md  RUNTIME_TEST_REPORT.md  TASK_4_COMPLETION_REPORT.md  UNIVERSAL_WORKSHOP_FILE_INDEX.md  UNIVERSAL_WORKSHOP_MEMORY_MAP.md  UNIVERSAL_WORKSHOP_MIGRATION_GUIDE.md  analyze_errors.py  backup_cron_setup.sh  backup_monitor.py  backup_setup.py  check_system_detailed.py  check_system_status.py  corrected_final_migration_validation.json  corrected_final_migration_validation.py  create_test_monitor.py  dependency_map.txt  (+65 more)
apps/universal_workshop/: .gitconfig_workshop  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISION_RECORD.md  CHANGELOG.md  CLAUDE.md  CURRENT_ARCHITECTURE_OVERVIEW.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_ROADMAP.md  README.md  WEEK2_COMPONENT_INTEGRATION_GUIDE.md  cleanup_dead_code.sh  dev-requirements.txt  pyproject.toml  requirements.txt
apps/universal_workshop/.github/workflows/: ci.yml
apps/universal_workshop/archives/consolidation_attempt_2025/: complete_consolidation_migration.py  migrate_doctypes.py  proper_consolidation_migration.py
apps/universal_workshop/docs/: ARCHITECTURE_ANALYSIS_REPORT.md  CLAUDE.md  README_API_CONFIG.md  SHARED_LIBRARIES_USAGE_GUIDE.md  deep_integration_review.md  enhancement_recommendations.md  external_dependencies.txt  installation_guide.md  integration_readiness.md  phase1_breakdown.md  phase2_breakdown.md  phase3_breakdown.md  task_20_6_validation_report.json  task_execution_plan.md
apps/universal_workshop/docs/analysis/: api_distribution.md  asset_loading_performance.md  business_logic_consolidation_planning.md  business_logic_extraction.md  database_schema_impact.md  dead_code_detection.md  doctype_dependencies.md  doctype_field_analysis.md  doctype_relationships.md  legacy_code_elimination_plan.md  memory_usage_analysis.md  module_complexity.md  module_hooks.md  module_imports.md  module_inventory.md  performance_impact_assessment.md  shared_library_implementation_strategy.md
apps/universal_workshop/docs/audit/: phase3_audit_report.md
apps/universal_workshop/docs/execution/: CLEANUP_SUMMARY.md  P1_VALIDATION_RESULTS.md  (+34 more)
apps/universal_workshop/frontend_v2/: ONBOARDING_V2_SUMMARY.md  ONBOARDING_WIZARD_STRATEGIC_PLAN.md  README.md  Universal Workshop - Modern Onboarding Wizard Plan.md  demo-onboarding.html  env.d.ts  index.html  package-lock.json  package.json  quick-access.html  test-profile-setup.html  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/universal_workshop/scripts/: __init__.py  client_deployment.py  create_module.py  fix_all_errors.py  fix_company.py  fix_indentation.py  fix_missing_controllers.py  fix_technician_errors.py  quality_check.py  schema_comparison.py  test_documentation_system.py  test_qr_code_manual.py  test_secure_redirect.py  test_vat_manual.py
apps/universal_workshop/tests/: quick_test.py  simple_test.py  simple_test_optimization.py  test_api_performance.py  test_arabic_features.py  test_auth_flow.py  test_billing_manual.py  test_branding.py  test_customer.py  test_dark_mode.py  test_elasticsearch.py  test_help_system.py  test_image_optimization.py  test_jwt_simple.py  test_logo_injection.py  test_loyalty_program.py  test_order_conversion_workflow.py  test_parts_auto_suggestion.py  test_payment_integration.py  test_performance_visualizations.py  test_progress_tracking.py  test_redirect_simple.py  test_role_access_validation.py  test_role_based_routing.py  test_scrap_vehicle.py  test_session_management.py  test_training_module.py  test_vat_manual.py  test_vehicle_implementation.py
apps/universal_workshop/universal_workshop/: ARCHITECTURAL_FIXES_COMPLETE.md  Comprehensive Current State Assessment.md  DISABLED_MODULES_README.md  EMERGENCY_FIXES_COMPLETED.md  boot.py  hooks.py  modules.txt  patches.txt  setup_basic_data.py  tasks.py  test_system_status.py
(+2156 files in other folders)
